# cpp_ros2_study

./: README.md
lesson_01/: hello_robot  hello_robot.cpp  robot_info  robot_info.cpp
lesson_02/: gripper_p_controller  gripper_p_controller.cpp  joint_error  joint_error.cpp  robot_joint_controller  robot_joint_controller.cpp  robot_variable  robot_variable.cpp  simple_p_controller  simple_p_controller.cpp
lesson_03/: emergency_stop_check  emergency_stop_check.cpp  joint_limit_check  joint_limit_check.cpp  robot_enabled_check  robot_enabled_check.cpp  robot_state_check  robot_state_check.cpp  safe_motion_check  safe_motion_check.cpp  safe_p_controller  safe_p_controller.cpp  target_reached_check  target_reached_check.cpp
lesson_04/: basic_for_loop  basic_for_loop.cpp  continue_example  continue_example.cpp  control_steps  control_steps.cpp  gripper_closing_loop  gripper_closing_loop.cpp  repeated_p_controller  repeated_p_controller.cpp  safe_loop_controller  safe_loop_controller.cpp  while_p_controller  while_p_controller.cpp
lesson_05/: all_joint_reached  all_joint_reached.cpp  joint_error_vector  joint_error_vector.cpp  joint_names  joint_names.cpp  joint_positions  joint_positions.cpp  multi_joint_limit_check  multi_joint_limit_check.cpp  multi_joint_p_controller  multi_joint_p_controller.cpp  multi_joint_safe_p_controller  multi_joint_safe_p_controller.cpp  vector_size_check  vector_size_check.cpp
lesson_06/: clean_multi_joint_controller  clean_multi_joint_controller.cpp  compute_error_function  (+15 more)
lesson_10/: CMakeLists.txt  robot_demo
lesson_10/include/: robot_controller.hpp
lesson_10/src/: main.cpp  multi_joint_controller.cpp  robot_controller.cpp  test_robot_controller.cpp
(+50 files in other folders)
